# fuzzy

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: tests.yml
examples/: readme.rs
src/: lib.rs
